@@ -333,6 +333,7 @@ private:
     String cmdMatch(int argc, char *argv[]);
     String cmdList(int argc, char *argv[]);
     String cmdRoute(int argc, char *argv[]);
+    String cmdGarbageCollect(int argc, char *argv[]);
 
 
     typedef ACE_Hash_Map_Manager<String,NameRecord,ACE_Null_Mutex> NameMapHash;
